Fixed bug #36776 (node_list_wrapper_dtor segfault)   - no optimizations. this extension is VERY touchy